PENDING: arm64: dts: qcom: Add wakeup source property in USB0 port controller on QCS8275 IQ8 EVK
For resuming the system from complete system suspend, add wakeup source
property for the interrupt inside USB0 port controller.

Change-Id: I2d8dc0e8404c95261cf637560e3b4681d3036261
Signed-off-by: Swati Agarwal <quic_swatagar@quicinc.com>
(cherry picked from commit de90e503e5660753797eedaad191c780a0d23912)
(cherry picked from commit 17f91a566b38dd83aa6718eb6594549ba951ecb2)
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs8275-iq-8275-evk.dts
@@ -299,6 +299,7 @@
 		compatible = "ti,hd3ss3220";
 		reg = <0x67>;
 		interrupts = < 45 IRQ_TYPE_EDGE_FALLING>;
+		wakeup-source;
 
 		connector@0 {
 			compatible = "usb-c-connector";
