PENDING: arm64: dts: qcom: Add EEPROM support for IQ-9075-evk
Add dts change to support EEPROM on IQ-9075-evk.

Change-Id: I020078aa0011c0f8922d71047b81fe2d6fe4803a
Signed-off-by: Vishal Kumar Pal <quic_vispal@quicinc.com>
Upstream-Status: Pending

--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -334,6 +334,7 @@
 	snps,mtl-rx-config = <&mtl_rx_setup>;
 	snps,mtl-tx-config = <&mtl_tx_setup>;
 	snps,ps-speed = <1000>;
+	eeprom-for-mac = <&eeprom0>;
 
 	status = "okay";
 
