arm64: dts: rubikpi3: modify the interrupt trigger mode of HDMI out
Change the interrupt trigger mode of HDMI out
to dual edge trigger

Change-Id: I62bc733307ccf4571b64a6276aca1d488143e17a
Signed-off-by: limeng0715 <limeng0715@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
@@ -1260,7 +1260,7 @@
 	lt9611_codec: hdmi-bridge@39 {
 		compatible = "lontium,lt9611";
 		reg = <0x39>;
-		interrupts-extended = <&tlmm 20 2>;
+		interrupts-extended = <&tlmm 20 IRQ_TYPE_EDGE_BOTH>;
 		reset-gpios = <&tlmm 21 0>;
 		enable-gpios = <&tlmm 40 0>;
 		ocb-gpios = <&tlmm 41 0>;
