--- a/arch/arm64/boot/dts/qcom/qcm6490-camera-sensor-rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-camera-sensor-rubikpi3.dtsi
@@ -31,43 +31,10 @@
 	qcom,cam-res-mgr {
 		status = "ok";
 		compatible = "qcom,cam-res-mgr";
-		gpios-shared-pinctrl = <549>;
-	    shared-pctrl-gpio-names = "cam_sensor_3v3";
-		pinctrl-names = "cam_sensor_3v3_active", "cam_sensor_3v3_suspend";
-		pinctrl-0 = <&cam_sensor_3v3_active>;
-		pinctrl-1 = <&cam_sensor_3v3_suspend>;
 	};
 };
 
 &tlmm {
-	cam_sensor_3v3_active: cam_sensor_3v3_active {
-		/* 3v3 */
-		mux {
-			pins = "gpio14";
-			function = "gpio";
-		};
-
-		config {
-			pins = "gpio14";
-			bias-disable; /* No PULL */
-			drive-strength = <2>; /* 2 MA */
-		};
-	};
-
-	cam_sensor_3v3_suspend: cam_sensor_3v3_suspend {
-		/* 3v3 */
-		mux {
-			pins = "gpio14";
-			function = "gpio";
-		};
-
-		config {
-			pins = "gpio14";
-			bias-pull-down; /* PULL DOWN */
-			drive-strength = <2>; /* 2 MA */
-		};
-	};
-
 	cam_sensor_mclk2_active: cam_sensor_mclk2_active {
 		/* MCLK2 */
 		mux {
@@ -279,15 +246,11 @@
 						&cam_sensor_active_rst2>;
 			pinctrl-1 = <&cam_sensor_mclk2_suspend
 						&cam_sensor_suspend_rst2>;
-			gpios = <&tlmm 66 0>,
-						<&tlmm 58 0>,
-						<&tlmm 14 0>;
+			gpios = <&tlmm 66 0>, <&tlmm 58 0>;
 			gpio-reset = <1>;
-			gpio-req-tbl-num = <0 1 2>;
-			gpio-req-tbl-flags = <1 0 1>;
-			gpio-req-tbl-label = "CAMIF_MCLK2",
-								"CAM_RESET2",
-								"cam_sensor_3v3";
+			gpio-req-tbl-num = <0 1>;
+			gpio-req-tbl-flags = <1 0>;
+			gpio-req-tbl-label = "CAMIF_MCLK2", "CAM_RESET2";
 			cci-master = <0>;
 			status = "ok";
 			clocks = <&camcc CAM_CC_MCLK2_CLK>;
@@ -335,15 +298,11 @@
 					&cam_sensor_active_rst4>;
 			pinctrl-1 = <&cam_sensor_mclk0_suspend
 					&cam_sensor_suspend_rst4>;
-			gpios = <&tlmm 64 0>,
-					<&tlmm 57 0>,
-					<&tlmm 14 0>;
+			gpios = <&tlmm 64 0>, <&tlmm 57 0>;
 			gpio-reset = <1>;
-			gpio-req-tbl-num = <0 1 2>;
-			gpio-req-tbl-flags = <1 0 1>;
-			gpio-req-tbl-label = "CAMIF_MCLK0",
-								"CAM_RESET4",
-								"cam_sensor_3v3";
+			gpio-req-tbl-num = <0 1>;
+			gpio-req-tbl-flags = <1 0>;
+			gpio-req-tbl-label = "CAMIF_MCLK0", "CAM_RESET4";
 			cci-master = <0>;
 			status = "ok";
 			clocks = <&camcc CAM_CC_MCLK0_CLK>;
