arm64: dts: rubikpi3: added min-vblank configuration for hdmi function
min-vblank: minimum value of edid vertical blanking area

Change-Id: I5be7beff1e2b8de9c903d37d1fe16814b5ba151a
Signed-off-by: limeng0715 <limeng0715@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/rubikpi3.dtsi
@@ -1266,6 +1266,7 @@
 		ocb-gpios = <&tlmm 41 0>;
 		vcc-supply = <&vreg_lt9611_3p3>;
 		config-mode = "edidAdaptiveResolution";
+		min-vblank = /bits/ 16 <0x19>;
 		ports {
 			#address-cells = <1>;
 			#size-cells = <0>;
