UBUNTU: SAUCE: fix graphics DTBO for qcs5430-{fp2p5,fp3}-addons-rb3gen2-vision-mezz
BugLink: https://bugs.launchpad.net/bugs/2116280 (Incorrect graphics dtbo file used in case of qcs5430-fp(2p5|3)-addons-rb3gen2-vision-mezz-ovl.dtb)

Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -350,14 +350,14 @@ qcs5430-fp2-addons-rb3gen2-vision-mezz-ovl-dtbs := \
 dtb-$(CONFIG_ARCH_QCOM) += qcs5430-fp2p5-addons-rb3gen2-vision-mezz-ovl.dtb
 qcs5430-fp2p5-addons-rb3gen2-vision-mezz-ovl-dtbs := \
     qcs5430-fp2p5-addons-rb3gen2-vision-mezz.dtb \
-    qcs5430-graphics.dtbo \
+    qcs5430-fp2p5-graphics.dtbo \
     qcm5430-camera-rb3.dtbo \
     qcm6490-video.dtbo
 
 dtb-$(CONFIG_ARCH_QCOM) += qcs5430-fp3-addons-rb3gen2-vision-mezz-ovl.dtb
 qcs5430-fp3-addons-rb3gen2-vision-mezz-ovl-dtbs := \
     qcs5430-fp3-addons-rb3gen2-vision-mezz.dtb \
-    qcs5430-graphics.dtbo \
+    qcs5430-fp2p5-graphics.dtbo \
     qcm5430-camera-rb3.dtbo \
     qcm6490-video.dtbo
 
