UBUNTU: SAUCE: import external DT from GA 1.5
[graphics]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/qcom/opensource/graphics-devicetree/-/tree/ffd13778e77beb7f09ae10bf43ba646c142eb62e/gpu
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/fa773afb2f592f9e2fb02d8ef84ddbec903c6dbe/recipes-graphics/graphicsdevicetree/qcom-graphicsdevicetree_git.bb

[camera]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/camera-devicetree/-/tree/a300c6efcf76a6658f617e9dd0041b5d3078efc9
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/camera-kernel/-/tree/f09a43b2584655d75dea39c7fae6ef72d034c645/camera_kt/dt-bindings
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/fa773afb2f592f9e2fb02d8ef84ddbec903c6dbe/recipes-multimedia/cameradtb/cameradtb_1.0.bb

[ethernet]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/data-eth/-/tree/2592320ffe035b7ecbab29e3c571189559445b37/ethernet-devicetree
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/fa773afb2f592f9e2fb02d8ef84ddbec903c6dbe/recipes-connectivity/qps615/qps615_1.0.bb

[video]

Imported from:
  https://git.codelinaro.org/clo/le/platform/vendor/opensource/video-devicetree/-/tree/9f78e1917c92875c39b181fbeffe547ec01b0640
Recipe:
  https://github.com/quic-yocto/meta-qcom-hwe/blob/fa773afb2f592f9e2fb02d8ef84ddbec903c6dbe/recipes-multimedia/video/qcom-videodtb_1.0.bb

Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcm6490-camera-sensor-idp.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-camera-sensor-idp.dtsi
@@ -130,7 +130,7 @@
 	};
 
 	/* Rear (W) */
-	qcom,cam-sensor0 {
+	idp_slot0: qcom,cam-sensor0 {
 		cell-index = <4>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <0>;
@@ -175,7 +175,7 @@
 	};
 
 	/* Rear-aux (T) */
-	qcom,cam-sensor1 {
+	idp_slot1: qcom,cam-sensor1 {
 		cell-index = <5>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <1>;
@@ -375,7 +375,7 @@
 	};
 
 	/* Rear-aux (UW) */
-	qcom,cam-sensor2 {
+	idp_slot2: qcom,cam-sensor2 {
 		cell-index = <6>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <2>;
@@ -419,7 +419,7 @@
 	};
 
 	/* Front */
-	qcom,cam-sensor3 {
+	idp_slot3: qcom,cam-sensor3 {
 		cell-index = <2>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <3>;
