--- a/arch/arm64/boot/dts/qcom/qcm6490-camera-sensor-rb3.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcm6490-camera-sensor-rb3.dtsi
@@ -78,7 +78,7 @@
 
 &cam_cci0 {
 	/*cam0a-ov9282*/
-	qcom,cam-sensor1 {
+	rb3_slot0a: qcom,cam-sensor1 {
 		cell-index = <1>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <0>;
@@ -115,7 +115,7 @@
 	};
 
     /*cam1-ov9282*/
-	qcom,cam-sensor6 {
+	rb3_slot1: qcom,cam-sensor6 {
 		cell-index = <6>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <1>;
@@ -323,7 +323,7 @@
 	};
 
 	/*cam3-imx577*/
-	qcom,cam-sensor0 {
+	rb3_slot3: qcom,cam-sensor0 {
 		cell-index = <0>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <3>;
@@ -414,7 +414,7 @@
 	};
 
 	/*cam0b-ov9282*/
-	qcom,cam-sensor7 {
+	rb3_slot0b: qcom,cam-sensor7 {
 		cell-index = <7>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <0>;
@@ -452,7 +452,7 @@
 	};
 
 	/*cam2-imx577*/
-	qcom,cam-sensor8 {
+	rb3_slot2: qcom,cam-sensor8 {
 		cell-index = <8>;
 		compatible = "qcom,cam-sensor";
 		csiphy-sd-index = <2>;
