ASoC: qcs9075-iq-evk: Enable audio on qcs9075-iq-evk
BugLink: https://bugs.launchpad.net/bugs/2115794 (Unable to hear the audio playback clip from the RB8 hardware speakers with Server & Desktop images)

Change-Id: Iac9248f691a7f0dd5d79f074234bdb285851b302
Signed-off-by: Mohammad Rafi Shaik <mohammad.rafi.shaik@oss.qualcomm.com>
Signed-off-by: Masahiro Yamada <masahiro.yamada@canonical.com>

--- a/arch/arm64/boot/dts/qcom/sa8775p.dtsi
+++ b/arch/arm64/boot/dts/qcom/sa8775p.dtsi
@@ -9333,9 +9333,13 @@
 						qcom,protection-domain = "avs/audio",
 									 "msm/adsp/audio_pd";
 
+						q6apmdai: dais {
+							compatible = "qcom,q6apm-dais";
+							iommus = <&apps_smmu 0x3001 0x0>;
+						};
+
 						q6apmbedai: bedais {
 							compatible = "qcom,q6apm-lpass-dais";
-							q6apm-dai-uses-dummy-ops;
 							#sound-dai-cells = <1>;
 						};
 					};
@@ -9350,17 +9354,6 @@
 							compatible = "qcom,q6prm-lpass-clocks";
 							#clock-cells = <2>;
 						};
-					};
-
-					spf-core {
-						compatible = "qcom,spf_core";
-						reg = <GPR_AMDB_MODULE_IID>;
-					};
-
-					audio-pkt {
-						compatible = "qcom,audio-pkt";
-						reg = <GPR_VCPM_MODULE_IID>;
-						qcom,audiopkt-ch-name = "apr_audio_svc";
 					};
 				};
 			};
