--- a/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-addons-iq-9075-evk.dts
@@ -17,7 +17,7 @@
 
 	sound {
 		compatible = "qcom,qcs9075-rb8-sndcard";
-		model = "qcs9075-rb8-snd-card";
+		model = "qcs9075-iq-evk-snd-card";
 
 		clocks = <&q6prmcc LPASS_HW_MACRO_VOTE LPASS_CLK_ATTRIBUTE_COUPLE_NO>,
 			    <&q6prmcc LPASS_HW_DCODEC_VOTE LPASS_CLK_ATTRIBUTE_COUPLE_NO>;
@@ -47,23 +47,15 @@
 			link-name = "MI2S-LPAIF_SDR-RX-PRIMARY";
 
 			cpu {
-				sound-dai = <&q6apmbedai PRIMARY_SDR_MI2S_RX>;
+				sound-dai = <&q6apmbedai PRIMARY_MI2S_RX>;
 			};
 
 			codec {
 				sound-dai = <&max98357a>;
 			};
-		};
 
-		hs1-mi2s-playback-dai-link {
-			link-name = "MI2S-LPAIF_SDR-RX-SECONDARY";
-
-			cpu {
-				sound-dai = <&q6apmbedai SECONDARY_SDR_MI2S_RX>;
-			};
-
-			codec {
-				sound-dai = <&max98357a>;
+			platform {
+				sound-dai = <&q6apm>;
 			};
 		};
 
@@ -71,62 +63,17 @@
 			link-name = "MI2S-LPAIF_SDR-TX-TERTIARY";
 
 			cpu {
-				sound-dai = <&q6apmbedai TERTIARY_SDR_MI2S_TX>;
+				sound-dai = <&q6apmbedai TERTIARY_MI2S_TX>;
 			};
 
 			codec {
 				sound-dai = <&dmic_codec>;
 			};
-		};
 
-		lpi-quad-capture-dai-link {
-			link-name = "MI2S-LPAIF_RXTX-TX-PRIMARY";
-
-			cpu {
-				sound-dai = <&q6apmbedai PRIMARY_MI2S_TX>;
-			};
-
-			codec {
-				sound-dai = <&msm_stub_codec 1>;
+			platform {
+				sound-dai = <&q6apm>;
 			};
 		};
-
-		lpi-quad-playback-dai-link {
-			link-name = "MI2S-LPAIF_RXTX-RX-PRIMARY";
-
-			cpu {
-				sound-dai = <&q6apmbedai PRIMARY_MI2S_RX>;
-			};
-
-			codec {
-				sound-dai = <&msm_stub_codec 0>;
-			};
-		};
-
-		lpi-tdm-quad-capture-dai-link {
-			link-name = "TDM-LPAIF_RXTX-TX-PRIMARY";
-
-			cpu {
-				sound-dai = <&q6apmbedai PRIMARY_TDM_TX_0>;
-			};
-
-			codec {
-				sound-dai = <&msm_stub_codec 1>;
-			};
-		};
-
-		lpi-tdm-quad-playback-dai-link {
-			link-name = "TDM-LPAIF_RXTX-RX-PRIMARY";
-
-			cpu {
-				sound-dai = <&q6apmbedai PRIMARY_TDM_RX_0>;
-			};
-
-			codec {
-				sound-dai = <&msm_stub_codec 0>;
-			};
-		};
-
 	};
 };
 
@@ -212,6 +159,7 @@
 	msm_stub_codec: msm-stub-codec {
 		compatible = "qcom,msm-stub-codec";
 		#sound-dai-cells = <1>;
+		status = "disabled";
 	};
 	max98357a: audio-codec-0 {
 		compatible = "maxim,max98357a";
@@ -222,25 +170,6 @@
 		compatible = "dmic-codec";
 		#sound-dai-cells = <0>;
 		num-channels = <1>;
-	};
-
-	spf_core_platform: spf-core-platform {
-		compatible = "qcom,spf-core-platform";
-
-		msm_audio_mem: msm-audio-mem {
-			compatible = "qcom,msm-audio-mem";
-			qcom,smmu-version = <2>;
-			qcom,smmu-enabled;
-			iommus = <&apps_smmu 0x3001 0x0>;
-			qcom,iommu-dma-addr-pool = <0x10000000 0x10000000>;
-			qcom,smmu-sid-mask = /bits/ 64 <0xf>;
-			dma-coherent;
-		};
-
-		msm_audio_mem_cma: msm-audio-mem-cma {
-			compatible = "qcom,msm-audio-mem";
-			memory-region = <&audio_cma_mem>;
-		};
 	};
 };
 
