arm64: dts: rubikpi3: change device tree name
Change-Id: Idcdadeef8d29e474ca5d9c30a3a85991be4adfd7
Signed-off-by: hongyang-rp <hongyang.zhao@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dts
+++ b/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dts
@@ -5,7 +5,7 @@
 
 /dts-v1/;
 
-#include "rubikpi3.dtsi"
+#include "qcs6490-thundercomm-rubikpi3.dtsi"
 
 / {
 	model = "Thundercomm, Inc. RUBIK Pi 3";
