--- a/arch/arm64/boot/dts/qcom/Makefile
+++ b/arch/arm64/boot/dts/qcom/Makefile
@@ -330,7 +330,7 @@ dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-addons-crd.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-crd.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-addons-qcp.dtb
 dtb-$(CONFIG_ARCH_QCOM)	+= x1e80100-qcp.dtb
-dtb-$(CONFIG_ARCH_QCOM) += rubikpi3.dtb
+dtb-$(CONFIG_ARCH_QCOM) += qcs6490-thundercomm-rubikpi3.dtb
 
 # External overlays
 dtb-$(CONFIG_ARCH_QCOM) += qcs6490-addons-rb3gen2-video-mezz-ovl.dtb
@@ -401,9 +401,9 @@ qcs9075-addons-iq-9075-evk-ovl-dtbs := \
     qcs9100-graphics.dtbo \
     qcs9075-camera-iq-9075-evk.dtbo
 
-dtb-$(CONFIG_ARCH_QCOM) += rubikpi3-ovl.dtb
-rubikpi3-ovl-dtbs := \
-    rubikpi3.dtb \
+dtb-$(CONFIG_ARCH_QCOM) += qcs6490-thundercomm-rubikpi3-ovl.dtb
+qcs6490-thundercomm-rubikpi3-ovl-dtbs := \
+    qcs6490-thundercomm-rubikpi3.dtb \
     qcm6490-graphics.dtbo \
     qcm6490-camera-rubikpi3.dtbo \
     qcm6490-video.dtbo
