arm64: dts: rubikpi3: set the Bluetooth serial port baud rate to 3Mbps
If shutdown gpio is not set, the default baud rate will be used.

Change-Id: I610f3aa9bfc68234184f4773e355f11e728269a9
Signed-off-by: liyk0706 <liyk0706@thundersoft.com>
Signed-off-by: hongyang-rp <hongyang.zhao@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dtsi
@@ -1338,11 +1338,12 @@
 		clock-names = "lpo";
 		device-wakeup-gpios = <&tlmm 39 GPIO_ACTIVE_HIGH>;
 		host-wakeup-gpios = <&tlmm 137 GPIO_ACTIVE_HIGH>;
-		reset-gpios = <&tlmm 17 GPIO_ACTIVE_LOW>;
+		shutdown-gpios = <&tlmm 17 GPIO_ACTIVE_HIGH>;
 		pinctrl-0 = <&bt_device_wake>, <&bt_host_wake>, <&bt_reset>;
 		pinctrl-names = "default";
 		vbat-supply = <&vreg_sdio_wifi_1p8>;
 		vddio-supply = <&vreg_sdio_wifi_1p8>;
+		max-speed = <3000000>;
 	};
 };
 
