arm64: dts: rubikpi3: switch the USB2.0 Type-A port to OTG mode
The default mode is host mode; you can switch between device mode
and host mode via the `/sys/kernel/debug/usb/8c00000.usb/mode node`.

GPIO_119 is the GPIO that controls the USB power supply pin.
In device mode, USB power should be turned off (GPIO_119 is low).
I haven't figured out where to associate the GPIO, so I'm temporarily
exporting the GPIO for control via the command (/sys/class/gpio).

Change-Id: I1d0faa0250a9de701fbd04b49ecac679ed34a170
Signed-off-by: hongyang-rp <hongyang.zhao@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dtsi
@@ -887,7 +887,8 @@
 	usb-role-switch;
 	qcom,enable-rt;
 	wakeup-source;
-	dr_mode = "host";
+	dr_mode = "otg";
+	role-switch-default-mode = "host";
 
 	status = "okay";
 
