PENDING: arm64: dts: qcom: Expose Ethernet MAC address via NVMEM
BugLink: https://bugs.launchpad.net/bugs/2116922 ([RB8] 0004-QCLINUX-net-stmmac-Add-EEPROM-support-to-driver.patch feedback (LP: #2116922))

Define the Ethernet MAC address stored in the I2C EEPROM
as an NVMEM cell within the device tree for IQ-9075.

Change-Id: Icfe0d3fe81226e2133bd95b3c7a087cd07523c9d
Signed-off-by: Vishal Kumar Pal <quic_vispal@quicinc.com>
Signed-off-by: Hui Wang <hui.wang@canonical.com>

--- a/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
+++ b/arch/arm64/boot/dts/qcom/qcs9075-iq-9075-evk.dts
@@ -336,7 +336,8 @@
 	snps,mtl-rx-config = <&mtl_rx_setup>;
 	snps,mtl-tx-config = <&mtl_tx_setup>;
 	snps,ps-speed = <1000>;
-	eeprom-for-mac = <&eeprom0>;
+	nvmem-cells = <&mac_addr0>;
+	nvmem-cell-names = "mac-address";
 
 	status = "okay";
 
@@ -596,6 +597,10 @@
 			compatible = "fixed-layout";
 			#address-cells = <1>;
 			#size-cells = <1>;
+
+			mac_addr0: mac-addr@0 {
+				reg = <0x0 0x6>;
+			};
 		};
 	};
 };
