arm64: dts: rubikpi3: adjust the register configuration of LT9611
Added register addresses and values for the "mipi-digi-regs" and
"sleep-regs" properties, as well as the "lt,cts_n_normal" property,
to the lt9611_codec node for dynamically adjusting the LT9611
register configuration.

Add "#sound-dai-cells" attribute to ensure HDMI out audio function
is normal.

Change-Id: I275a03fb4c29c1c31287f3cc763d6ddf8e72ecb4
Signed-off-by: limeng0715 <limeng0715@thundersoft.com>

--- a/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dtsi
+++ b/arch/arm64/boot/dts/qcom/qcs6490-thundercomm-rubikpi3.dtsi
@@ -1359,18 +1359,6 @@
 	};
 };
 
-&soc {
-	vreg_lt9611_3p3: lt9611-3p3-vreg {
-		compatible = "regulator-fixed";
-		regulator-name = "vreg_lt9611_3p3";
-		gpio = <&tlmm 83 0>;
-		regulator-min-microvolt = <3300000>;
-		regulator-max-microvolt = <3300000>;
-		enable-active-high;
-		regulator-enable-ramp-delay = <10000>;
-	};
-};
-
 &apps_rsc {
 	regulators-0 {
 		vreg_l6b_1p2: ldo6 {
@@ -1388,18 +1376,61 @@
 	};
 };
 
+&tlmm {
+	lt9611_irq_pin: lt9611-irq-state {
+		pins = "gpio20";
+		function = "gpio";
+		drive-strength = <2>;
+		bias-disable;
+	};
+
+	lt9611_rst_pin: lt9611-rst-state {
+		pins = "gpio21";
+		function = "gpio";
+		output-high;
+		input-disable;
+	};
+
+	lt9611_enable_pin: lt9611-enable-pin {
+		pins = "gpio83";
+		function = "gpio";
+		output-high;
+		input-disable;
+	};
+};
+
 &i2c9 {
 	status = "okay";
 	lt9611_codec: hdmi-bridge@39 {
 		compatible = "lontium,lt9611";
 		reg = <0x39>;
-		interrupts-extended = <&tlmm 20 IRQ_TYPE_EDGE_BOTH>;
-		reset-gpios = <&tlmm 21 0>;
-		enable-gpios = <&tlmm 40 0>;
-		ocb-gpios = <&tlmm 41 0>;
-		vcc-supply = <&vreg_lt9611_3p3>;
-		config-mode = "edidAdaptiveResolution";
-		min-vblank = /bits/ 16 <0x19>;
+		interrupts-extended = <&tlmm 20 IRQ_TYPE_EDGE_FALLING>;
+		reset-gpios = <&tlmm 21 GPIO_ACTIVE_HIGH>;
+		enable-gpios = <&tlmm 83 GPIO_ACTIVE_HIGH>;
+
+		pinctrl-names = "default";
+		pinctrl-0 = <&lt9611_irq_pin &lt9611_rst_pin &lt9611_enable_pin>;
+		#sound-dai-cells = <0>;
+
+		mipi-digi-regs = <
+			0x8300 0x00
+			0x830a 0x00
+			0x824f 0x80
+			0x8250 0x14
+			0x8303 0x40
+			0x8302 0x0a
+			0x8306 0x0a
+		>;
+
+		sleep-regs = <
+			0x8102 0x48
+			0x8123 0x80
+			0x8130 0x00
+			0x8011 0x0a
+		>;
+
+		lt,cts_n_normal;
+
 		ports {
 			#address-cells = <1>;
 			#size-cells = <0>;
@@ -1695,7 +1726,7 @@
 				sound-dai = <&q6apmbedai QUATERNARY_MI2S_RX>;
 			};
 			codec {
-				sound-dai = <&msm_stub_codec 2>;
+				sound-dai = <&msm_stub_codec 2>, <&lt9611_codec>;
 			};
 			platform {
 				sound-dai = <&q6apm>;
